--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Lines of Code (LoC)}
 \begin{document}
 
-\plush{\sqmTitlePage{1}}
+\plush{\sqmTitlePage{1}{q9Gr2xguP5I}}
 
 \thought{Everybody wants higher \emph{quality of code}, but nobody knows how to measure it.}
 
