--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Cyclomatic Complexity}
 \begin{document}
 
-\plush{\sqmTitlePage{2}}
+\plush{\sqmTitlePage{2}{Cvv0Olx4Bpw}}
 
 \thought{Some programmers mistakenly feel proud of higher complexity of their code.}
 
