--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Cognitive Complexity}
 \begin{document}
 
-\plush{\sqmTitlePage{3}}
+\plush{\sqmTitlePage{3}{oRUux3w4rsc}}
 
 \thought{Cyclomatic complexity is highly inaccurate if being compared with code readability evaluated by a human.}
 
