--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Maintainability Index}
 \begin{document}
 
-\plush{\sqmTitlePage{5}}
+\plush{\sqmTitlePage{5}{xnSnPfVkmkM}}
 
 \pitch{\pptQuote{fred-brooks.jpg}{The total \emph{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
 
