--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{LCOM 1, 2, 3, 4, 5, ...}
 \begin{document}
 
-\plush{\sqmTitlePage{7}}
+\plush{\sqmTitlePage{7}{74YigDo8_BE}}
 
 \pitch{\pptQuote{../06-coupling/larry-constantine.jpg}{Coupling is reduced when the relationships among elements not in the same module are minimized. There are two ways of achieving this- minimizing the relationships among modules and \emph{maximizing relationships} among elements in the same module.}{Wayne P. Stevens, Glenford J. Myers, and \emph{Larry L. Constantine}, \textit{Structured Design}, IBM Systems Journal 13.2 (1974)}}
 
