--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{TCC and LCC}
 \begin{document}
 
-\plush{\sqmTitlePage{8}}
+\plush{\sqmTitlePage{8}{JOKxjpAglFU}}
 
 \pitch{\pptQuote{edward-yourdon.jpg}{Module cohesion may be conceptualized as the \emph{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \emph{close approximation} of inherent problem structure.}{\emph{Edward Yourdon} and Larry Constantine, \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}, Prentice Hall, 1979}}
 
