--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -27,7 +27,7 @@
 \newcommand*\thetitle{CAMC and NHD}
 \begin{document}
 
-\plush{\sqmTitlePage{9}}
+\plush{\sqmTitlePage{9}{oCxJ_YSSAGo}}
 
 \pitch{
 \pptBanner{Rational Unified Process (RUP)}
