--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -27,7 +27,7 @@
 \newcommand*\thetitle{Object Dimensions}
 \begin{document}
 
-\plush{\sqmTitlePage{10}}
+\plush{\sqmTitlePage{10}{jdEFoz-OQ44}}
 
 \plush{
 \pptBanner{Object Metrics}
