--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -27,7 +27,7 @@
 \newcommand*\thetitle{Clone Coverage}
 \begin{document}
 
-\plush{\sqmTitlePage{11}}
+\plush{\sqmTitlePage{11}{ynPTEzDTutc}}
 
 \pitch{\pptQuote{../09-CAMC-and-NHD/robert-martin.jpg}{Duplication is the \emph{primary enemy} of a well-designed system.}{\textit{Clean Code: A Handbook of Agile Software Craftsmanship}, Robert C. Martin, Pearson, 2008}}
 
