--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Tech Debt}
 \begin{document}
 
-\plush{\sqmTitlePage{14}}
+\plush{\sqmTitlePage{14}{pvZDcytPU3w}}
 
 \pitch{\pptQuote{../05-maintainability-index/ward-cunningham.jpg}{Shipping first time code is like going into \emph{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \emph{interest} on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
 
