--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Coupling}
 \begin{document}
 
-\plush{\sqmTitlePage{6}}
+\plush{\sqmTitlePage{6}{G0vN6Ah8-js}}
 
 \pitch{\pptQuote{larry-constantine.jpg}{The fewer and simpler the connections between modules, the easier it is to understand each module without reference to other modules.}{Wayne P. Stevens, Glenford J. Myers, and \emph{Larry L. Constantine}, \textit{Structured Design}, IBM Systems Journal 13.2 (1974)}}
 
