--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Neural Metrics}
 \begin{document}
 
-\plush{\sqmTitlePage{99}}
+\plush{\sqmTitlePage{99}{}}
 
 % https://www.mdpi.com/2076-3417/13/6/3722
 
