--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -116,7 +116,11 @@ int fibonacci(int n) {
 
 \pitch{\pptQuote{richard-hamlet.jpg}{It is a truism that \emph{good} software is easy to \emph{maintain}.}{Richard G. Hamlet, \textit{Testing Programs with the Aid of a Compiler}, IEEE Transactions on Software Engineering, 4, 1977\par\vspace*{1em}{\scriptsize ``Dr. Hamlet presented an early testing system that was embedded in a compiler and performed a version of instrumented weak mutation. Although the method differed significantly from later mutation systems, Hamlet's system seems to be \emph{the first mutation-like testing system}.'' --- Jefferson A. Offutt and Stephen D. Lee, \textit{How strong is weak mutation?}, Proceedings of the Symposium on Testing, Analysis, and Verification, 1991\par}}}
 
-\pitch{\pptQuote{richard-lipton.jpg}{Our groups at Yale University and the Georgia Institute of Technology have constructed a system whereby we can determine the extent to which a given set of test data has \emph{adequately} tested a Fortran program by direct measurement of the number and kinds of errors it is \emph{capable} of uncovering.}{Richard A. DeMillo, \emph{Richard J. Lipton}, Frederick G. Sayward, \textit{Hints on test Data Selection: Help for the Practicing Programmer}, IEEE Computer 11(4), 1978}}
+\qte
+  [Richard J. Lipton]
+  {richard-lipton.jpg}
+  {Our groups at Yale University and the Georgia Institute of Technology have constructed a system whereby we can determine the extent to which a given set of test data has \emph{adequately} tested a Fortran program by direct measurement of the number and kinds of errors it is \emph{capable} of uncovering.}
+  {demillo1978hints}
 
 \pitch{\pptQuote{timothy-budd.jpg}{A test set is \emph{adequate} if it can distinguish the subject program from a collection of similar programs, called mutants, obtained by making \emph{small} syntactic modifications to the subject program.}{Timothy A. Budd, \textit{Mutation analysis: Ideas, examples, problems and prospects}, North-Holland Publishing Company, Amsterdam, Netherlands, 1981}}
 
