--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -122,7 +122,10 @@ int fibonacci(int n) {
   {Our groups at Yale University and the Georgia Institute of Technology have constructed a system whereby we can determine the extent to which a given set of test data has \emph{adequately} tested a Fortran program by direct measurement of the number and kinds of errors it is \emph{capable} of uncovering.}
   {demillo1978hints}
 
-\pitch{\pptQuote{timothy-budd.jpg}{A test set is \emph{adequate} if it can distinguish the subject program from a collection of similar programs, called mutants, obtained by making \emph{small} syntactic modifications to the subject program.}{Timothy A. Budd, \textit{Mutation analysis: Ideas, examples, problems and prospects}, North-Holland Publishing Company, Amsterdam, Netherlands, 1981}}
+\qte
+  {timothy-budd.jpg}
+  {A test set is \emph{adequate} if it can distinguish the subject program from a collection of similar programs, called mutants, obtained by making \emph{small} syntactic modifications to the subject program.}
+  {budd1981mutation}
 
 \pitch{\pptQuote{william-howden.jpg}{In \emph{weak mutation testing} method, tests are constructed which are guaranteed to force program statements which contain certain classes of errors to act incorrectly during the execution of the program over those tests.}{William E. Howden, \textit{Weak Mutation Testing and Completeness of Test Sets}, IEEE Transactions on Software Engineering 4, 1982}}
 
