--- a/main.bib
+++ b/main.bib
@@ -15,3 +15,10 @@
   year={1978},
   publisher={IEEE}
 }
+
+@article{budd1981mutation,
+  title={Mutation Analysis: Ideas, Examples, Problems and Prospects},
+  author={Budd, Timothy A.},
+  year={1981},
+  publisher={North-Holland Publishing Company, Amsterdam, Netherlands},
+}
